--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -16,7 +17,8 @@
     "fs-extra": "^11.2.0",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^6.10.0",
+    "mongoose-seed": "^0.6.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
