--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon app.js",
-    "build": "npm run netlify build"
+    "build": "npm run build"
   },
   "dependencies": {
     "@netlify/functions": "^2.6.0",
